tests/baselines/reference/contextualTyping30.errors.txt
tests/cases/compiler/contextualTyping30.ts(1,37): error TS2345: Argument of type '{}[]' is not assignable to parameter of type 'number[]'.
  Type '{}' is not assignable to type 'number'.


==== tests/cases/compiler/contextualTyping30.ts (1 errors) ====
    function foo(param:number[]){}; foo([1, "a"]);
                                        ~~~~~~~~
!!! error TS2345: Argument of type '{}[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Type '{}' is not assignable to type 'number'.